--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,16 +1,15 @@
-$PRIMARY: #6d6afe;
-$RED: #ff5b56;
-
-$BLACK: #111322;
-$WHITE: #ffffff;
-
-$GRAY-100: #f0f6ff;
-$GRAY-200: #e7effb;
-$GRAY-300: #ccd5e3;
-$GRAY-400: #9fa6b2;
-$GRAY-500: #3e3e43;
-
+$primary: #6d6afe;
 $skyblue: #6ae3fe;
+$red: #ff5b56;
+$black: #111322;
+$white: #ffffff;
+
+$gray-100: #f0f6ff;
+$gray-200: #e7effb;
+$gray-300: #ccd5e3;
+$gray-400: #9fa6b2;
+$gray-500: #3e3e43;
+
 $main-gradient-end: #ff9f9f;
 $gradient-wish-link-start: #fe8a8a;
 $gradient-wish-link-end: #a4ceff;
