--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,91 +6,129 @@
   justify-content: center;
   font-family: $font-family;
   font-style: $font-style;
-  margin: 10px;
-  @include font-base($BLACK, 500, 16px, 1.5);
+  text-align: center;
+  white-space: nowrap;
 
-  /* 크기별 스타일 */
+  /* 공통 스타일 */
+  &.action {
+    width: 280px;
+    height: 51px;
+    padding: 16px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+  }
+
+  &.login {
+    width: 128px;
+    height: 53px;
+    padding: 16px 20px;
+    font-size: 18px;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+
+    @media (max-width: 390px) {
+      width: 80px;
+      height: 37px;
+      font-size: 14px;
+      padding: 10px 16px;
+    }
+  }
+
   &.add-link {
-    width: 100%;
-    max-width: 400px;
-    height: 60px;
+    width: 350px;
+    height: 53px;
     padding: 16px 20px;
     gap: 10px;
     border-radius: 8px;
     font-size: 22px;
     border: none;
+    font-weight: 600;
 
-    @media (max-width: 768px) {
-      max-width: 250px;
-      height: 50px;
-      font-size: 18px;
-      padding: 12px 16px;
+    @media (max-width: 390px) {
+      width: 200px;
+      height: 37px;
+      font-size: 14px;
+      padding: 10px 16px;
     }
   }
+
   &.add-folder {
-    width: 124px;
+    display: flex;
+    align-items: center;
+    width: 127px;
     height: 35px;
-    padding: 8px 24px 8px 24px;
+    padding: 8px 24px;
     border-radius: 20px;
-    opacity: 0px;
     border: none;
     font-size: 15px;
+    gap: 5px;
   }
 
   &.share {
     width: 60px;
     height: 60px;
-    opacity: 0px;
     border-radius: 50%;
     border: none;
-    background-image: url('https://github.com/codeit-sprint-6th-part3-team1/linkbrary/assets/128791227/cbc7c8f1-8dd3-4daf-859c-3f73aec5867a');
-    background-repeat: no-repeat;
-    background-position: center;
+    display: flex;
+    align-items: center;
   }
 
   &.all-large {
-    width: 57px;
-    height: 40px;
-    padding: 8px 12px 8px 12px;
-    gap: 0px;
+    width: 52px;
+    height: 35px;
+    padding: 8px 12px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $PRIMARY;
-    font-weight: 400px;
-    font-size: 16px;
+    border: 1px solid $primary;
+    font-weight: 400;
+    font-size: 15px;
     line-height: 19.2px;
   }
 
   &.all-small {
-    width: 52px;
-    height: 33px;
-    padding: 8px 12px 8px 12px;
-    gap: 0px;
+    width: 45px;
+    height: 29px;
+    padding: 6px 10px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $PRIMARY;
-    font-weight: 400px;
+    border: 1px solid $primary;
+    font-weight: 400;
     font-size: 14px;
+    letter-spacing: -0.7px;
   }
 
   /* 색상별 스타일 */
   &.primary {
-    background-color: $PRIMARY;
-    color: $WHITE;
+    background-color: $primary;
+    color: $white;
   }
 
   &.white {
-    background-color: $WHITE;
-    color: $BLACK;
+    background-color: $white;
+    color: $black;
   }
 
   &.gray-200 {
-    background-color: $GRAY-200;
-    color: $BLACK;
+    background-color: $gray-200;
+    color: $black;
   }
 
   &.gradient {
-    background: linear-gradient(90.99deg, $PRIMARY 0.12%, $skyblue 101.84%);
-    color: $WHITE;
+    background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
+    color: $white;
+  }
+
+  &.red {
+    background-color: $red;
+    color: white;
+  }
+
+  @media (max-width: 1440px) {
+    .btn {
+      font-size: 85%;
+    }
   }
 }
