--- a/src/pages/faq/style.module.scss
+++ b/src/pages/faq/style.module.scss
@@ -11,15 +11,15 @@ $bgColor: #f0f6ff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $GRAY-100;
+  background-color: $gray-100;
   margin: 0 auto;
   width: 100%;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 
   h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 
     @media (max-width: 1440px) {
       font-size: 28px;
@@ -29,7 +29,6 @@ $bgColor: #f0f6ff;
 
 .gnb {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
   padding-top: 40px;
@@ -44,10 +43,6 @@ $bgColor: #f0f6ff;
     @media (max-width: 1440px) {
       gap: 16px;
     }
-  }
-
-  @media (max-width: 1440px) {
-    padding: 10px;
   }
 }
 
@@ -69,10 +64,10 @@ $bgColor: #f0f6ff;
   width: 100%;
   max-width: 800px;
   margin-bottom: 10px;
-  background-color: $WHITE;
-  border: 1px solid $GRAY-300;
+  background-color: $white;
+  border: 1px solid $gray-300;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba($BLACK, 0.1);
+  box-shadow: 0 2px 4px rgba($black, 0.1);
 
   .question {
     padding: 15px;
@@ -89,8 +84,8 @@ $bgColor: #f0f6ff;
     padding: 15px;
     font-size: 16px;
     line-height: 1.5;
-    color: $GRAY-500;
-    border-top: 1px solid $GRAY-300;
+    color: $gray-500;
+    border-top: 1px solid $gray-300;
 
     @media (max-width: 1440px) {
       font-size: 14px;
@@ -99,17 +94,16 @@ $bgColor: #f0f6ff;
 }
 
 .footer {
-  max-width: $PC_WIDTH;
   width: 100%;
   align-items: center;
-  background-color: $BLACK;
+  background-color: $black;
   margin: 0 auto;
 
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: $PC_WIDTH;
+
     width: 100%;
 
     @media (max-width: 1440px) {
@@ -131,7 +125,7 @@ $bgColor: #f0f6ff;
       transition: color 0.3s;
 
       &:hover {
-        color: $RED;
+        color: $red;
       }
     }
 
