--- a/src/pages/privacypolicy/style.module.scss
+++ b/src/pages/privacypolicy/style.module.scss
@@ -9,7 +9,8 @@ $bgColor: #f0f6ff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $GRAY-100;
+  background-color: $gray-100;
+  max-width: $PC_WIDTH;
   width: 100%;
   margin: 0 auto;
 }
@@ -19,7 +20,7 @@ $bgColor: #f0f6ff;
 
   h1 {
     font-size: 36px;
-    background: $BLACK;
+    background: $black;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
@@ -32,8 +33,8 @@ $bgColor: #f0f6ff;
 .content {
   max-width: 800px;
   margin-bottom: 20px;
-  background-color: $WHITE;
-  border: 1px solid $GRAY-300;
+  background-color: $white;
+  border: 1px solid $gray-300;
   border-radius: 8px;
   padding: 20px;
   width: 100%;
@@ -41,14 +42,14 @@ $bgColor: #f0f6ff;
   p {
     font-size: 16px;
     line-height: 1.5;
-    color: $GRAY-500;
+    color: $gray-500;
 
     a {
-      color: $PRIMARY;
+      color: $primary;
       text-decoration: underline;
 
       &:hover {
-        color: $RED;
+        color: $red;
       }
     }
 
@@ -60,8 +61,8 @@ $bgColor: #f0f6ff;
   h2 {
     font-size: 24px;
     margin-top: 20px;
-    color: $BLACK;
-    border-left: 4px solid $PRIMARY;
+    color: $black;
+    border-left: 4px solid $primary;
     padding-left: 10px;
 
     @media (max-width: 1440px) {
@@ -79,7 +80,7 @@ $bgColor: #f0f6ff;
 
   p {
     font-size: 16px;
-    color: $PRIMARY;
+    color: $primary;
 
     @media (max-width: 1440px) {
       font-size: 14px;
@@ -93,7 +94,7 @@ $bgColor: #f0f6ff;
 
   h3 {
     font-size: 18px;
-    color: $BLACK;
+    color: $black;
 
     @media (max-width: 1440px) {
       font-size: 16px;
@@ -109,12 +110,12 @@ $bgColor: #f0f6ff;
 
       a {
         font-size: 16px;
-        color: $PRIMARY;
+        color: $primary;
         text-decoration: none;
         transition: color 0.3s;
 
         &:hover {
-          color: $RED;
+          color: $red;
         }
 
         @media (max-width: 1440px) {
@@ -127,24 +128,21 @@ $bgColor: #f0f6ff;
 
 .gnb {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   height: 80px;
   background-color: $bgColor;
   width: 100%;
-  max-width: $PC_WIDTH;
   margin: 0 auto;
 
   @media (max-width: 1440px) {
-    height: 20px;
+    height: 100px;
   }
 }
 
 .footer {
-  max-width: $PC_WIDTH;
   width: 100%;
   align-items: center;
-  background-color: $BLACK;
+  background-color: $black;
   margin: 0 auto;
 
   .container {
@@ -174,7 +172,7 @@ $bgColor: #f0f6ff;
       transition: color 0.3s;
 
       &:hover {
-        color: $RED;
+        color: $red;
       }
     }
 
