--- a/src/pages/landing/style.module.scss
+++ b/src/pages/landing/style.module.scss
@@ -18,32 +18,37 @@ $MAIN_PADDING_Y: 32px;
 
 .title {
   width: 100%;
-  height: 700px;
   text-align: center;
   background-color: $gray-100;
   overflow: hidden;
   box-sizing: border-box;
 
   @media (max-width: $PC_WIDTH) {
-    height: 600px;
+    height: 950px;
   }
   @media (max-width: $TABLET_WIDTH) {
-    height: 500px;
+    height: 750px;
   }
   @media (max-width: $MOBILE_WIDTH) {
-    height: 400px;
+    height: 370px;
   }
 }
 
 .titleimage {
   align-items: center;
   width: 100%;
-  height: 450px;
   background: url('https://github.com/codeit-sprint-6th-part3-team1/linkbrary/assets/128791227/d230acb1-280a-4045-843f-a9e7848ce90f') no-repeat center center;
   background-size: contain;
+  height: 650px;
+  margin-top: 70px;
 
-  @media (max-width: $PC_WIDTH) {
+  @media (max-width: $TABLET_WIDTH) {
     height: 350px;
+    margin-top: 100px;
+  }
+  @media (max-width: $MOBILE_WIDTH) {
+    height: 180px;
+    margin-top: 30px;
   }
 }
 
@@ -51,15 +56,18 @@ $MAIN_PADDING_Y: 32px;
   word-break: keep-all;
   align-items: center;
   font-size: 64px;
+  margin-top: 100px;
+  margin-bottom: 40px;
 
-  @media (max-width: $PC_WIDTH) {
-    font-size: 56px;
-  }
   @media (max-width: $TABLET_WIDTH) {
-    font-size: 30px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    font-size: 64px;
   }
   @media (max-width: $MOBILE_WIDTH) {
-    font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-size: 32px;
   }
 }
 
