--- a/src/pages/landing/style.module.scss
+++ b/src/pages/landing/style.module.scss
@@ -15,9 +15,13 @@ $MAIN_PADDING_Y: 32px;
     padding-top: 50px;
   }
 }
-
 .title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
+  height: 100vh;
   text-align: center;
   background-color: $gray-100;
   overflow: hidden;
@@ -32,42 +36,63 @@ $MAIN_PADDING_Y: 32px;
   @media (max-width: $MOBILE_WIDTH) {
     height: 370px;
   }
-}
 
-.titleimage {
-  align-items: center;
-  width: 100%;
-  background: url('https://github.com/codeit-sprint-6th-part3-team1/linkbrary/assets/128791227/d230acb1-280a-4045-843f-a9e7848ce90f') no-repeat center center;
-  background-size: contain;
-  height: 650px;
-  margin-top: 70px;
-
-  @media (max-width: $TABLET_WIDTH) {
-    height: 350px;
-    margin-top: 100px;
-  }
-  @media (max-width: $MOBILE_WIDTH) {
-    height: 180px;
-    margin-top: 30px;
-  }
-}
-
-.maintext {
-  word-break: keep-all;
-  align-items: center;
-  font-size: 64px;
-  margin-top: 100px;
-  margin-bottom: 40px;
-
-  @media (max-width: $TABLET_WIDTH) {
-    margin-top: 60px;
-    margin-bottom: 40px;
+  .maintext {
+    flex-grow: 0; /* 요소가 가변적으로 공간을 차지 */
+    word-break: keep-all;
+    align-items: center;
     font-size: 64px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+    @media (max-width: $TABLET_WIDTH) {
+      font-size: 64px;
+      margin-top: 70px;
+      margin-bottom: 70px;
+    }
+    @media (max-width: $MOBILE_WIDTH) {
+      font-size: 32px;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
   }
-  @media (max-width: $MOBILE_WIDTH) {
-    margin-top: 50px;
-    margin-bottom: 20px;
-    font-size: 32px;
+
+  .addbutton {
+    flex-grow: 1; /* 요소가 가변적으로 공간을 차지 */
+    margin: 30px;
+    @media (max-width: $TABLET_WIDTH) {
+      margin: 30px;
+    }
+    @media (max-width: $MOBILE_WIDTH) {
+      margin: 30px;
+    }
+  }
+
+  .imagewrap {
+    flex-grow: 3; /* 더 많은 공간을 차지하도록 설정 */
+    display: flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    .titleimage {
+      width: 100%;
+      background: url('https://github.com/codeit-sprint-6th-part3-team1/linkbrary/assets/128791227/d230acb1-280a-4045-843f-a9e7848ce90f') no-repeat center
+        center;
+      background-size: contain;
+      height: 100%;
+      border-radius: 15px;
+      margin-top: 70px;
+
+      @media (max-width: $TABLET_WIDTH) {
+        margin-top: 30px;
+      }
+      @media (max-width: $MOBILE_WIDTH) {
+        margin: 30px;
+      }
+    }
   }
 }
 
