--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,5 +1,19 @@
 @import './index.scss';
 
+.droppable {
+  background-color: #f8f9fa;
+  padding: 16px;
+  border: 1px dashed #dee2e6;
+}
+
+.draggable {
+  user-select: none;
+  padding: 16px;
+  margin: 0 0 8px 0;
+  background: white;
+  border: 1px solid #dee2e6;
+}
+
 html,
 body,
 #root {
@@ -7,7 +21,7 @@ body,
   height: 100vh;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
