--- a/src/pages/links/style.module.scss
+++ b/src/pages/links/style.module.scss
@@ -4,7 +4,13 @@ $desktop: 1060px;
 $tablet: 704px;
 
 .header{
-  //position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.footer{
+  display: flex;
   flex-direction: column;
 }
 
@@ -23,14 +29,14 @@ $tablet: 704px;
 
 .bodyContainer{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   width: 100%;
 }
 
 .bodyContent{
   max-width: 1060px;
-  align-items: stetch;
+  align-items: center;
   gap: 40px;
 }
 
@@ -110,8 +116,8 @@ $tablet: 704px;
 @media (max-width: 1060px) {
   .bodyContainer{
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .cardContainer{
@@ -119,15 +125,22 @@ $tablet: 704px;
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
+    gap: 24px;
     grid-template: repeat(2, 1fr) / repeat(2, 1fr);
-    margin-left: 70px;
+    margin: 10px 30px;
   }
 }
 
 @media (max-width: 704px) {
+  .bodyContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
   .cardContainer {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
     grid-template: repeat(1, 1fr) / repeat(1, 1fr);
   }
