--- a/src/pages/faq/style.module.scss
+++ b/src/pages/faq/style.module.scss
@@ -52,7 +52,7 @@ $bgColor: #f0f6ff;
   gap: 6px;
 
   .email {
-    @include font-base(#3e3e43, 400, 14px, 16.71px);
+    @include fontSetting(#3e3e43, 400, 14px, 16.71px);
 
     @media (max-width: 1440px) {
       display: none;
@@ -112,7 +112,7 @@ $bgColor: #f0f6ff;
   }
 
   .copyright {
-    @include font-base(#676767, 400, 16px, 18.4px);
+    @include fontSetting(#676767, 400, 16px, 18.4px);
   }
 
   .contractList {
@@ -120,7 +120,7 @@ $bgColor: #f0f6ff;
     gap: 20px;
 
     a {
-      @include font-base(#cfcfcf, 400, 16px, 18.4px);
+      @include fontSetting(#cfcfcf, 400, 16px, 18.4px);
       text-decoration: none;
       transition: color 0.3s;
 
