--- a/src/pages/login/style.module.scss
+++ b/src/pages/login/style.module.scss
@@ -1,161 +1,103 @@
 @import '@/styles';
 
-.container {
-  width: 100vw;
-  height: 100vh;
-  max-height: 982px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  // 백그라운드 컬러 변수 지정 예정
-  background-color: #f0f6ff;
-}
-
-.loginContainer {
-  width: 400px;
-  max-height: 507px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 32px;
-}
-
 .formHeaderContainer {
-  width: 100%;
-  height: 78px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.formHeaderWrap {
-  width: auto;
-  height: 100%;
-
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-
   gap: 16px;
-}
+  user-select: none;
 
-.formTitleContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  .formTitleContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
 
-.formTitle {
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-  @include font-base(#000000, 400, 16px, 24px);
-}
+    > p {
+      @include fontSetting(#000000, 400, 16px, 24px);
+    }
 
-.titleLinkWrap {
-  padding: 0 0 0 8px;
-}
-
-.titleLink {
-  display: flex;
-  align-items: flex-start;
-  text-decoration: none;
-  border-bottom: 1px solid #6d6afe;
-  @include font-base(#6d6afe, 600, 16px, 19.09px);
-}
-
-.loginForm {
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
+    > a {
+      border-bottom: 1px solid #6d6afe;
+      @include fontSetting(#6d6afe, 600, 16px, 19.09px);
+    }
+  }
 }
 
 .inputContainer {
   width: 100%;
-
-  display: flex;
-  flex-direction: column;
+  margin: 30px 0 32px 0;
   gap: 24px;
-}
-
-.inputWrap {
-  width: 100%;
-  height: auto;
 
   display: flex;
   flex-direction: column;
-  gap: 12px;
-}
 
-.inputLabel {
-  @include font-base(#000000, 400, 14px, 16 71px);
-}
+  > form {
+    display: flex;
+    flex-direction: column;
 
-.formButton {
-  width: 100%;
-  height: 53px;
-  border: none;
-  border-radius: 8px;
-  background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
-  @include font-base(#f5f5f5, 600, 18px, 21.48px);
+    > label {
+      @include fontSetting(#000000, 400, 14px, 16.71px);
+      margin-bottom: 12px;
+      user-select: none;
+    }
+    :nth-child(3) {
+      margin-top: 24px;
+    }
 
-  cursor: pointer;
+    //TODO 버튼 교체
+    .formButton {
+      width: 100%;
+      height: 53px;
+      border: none;
+      border-radius: 8px;
+      @include fontSetting(#f5f5f5, 600, 18px, 21.48px);
+      margin-top: 32px;
+
+      &[data-err='true'] {
+        cursor: none;
+        background: gray;
+      }
+      &[data-err='false'] {
+        cursor: pointer;
+        background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+      }
+    }
+  }
+
+  @media screen and (max-width: $MOBILE_WIDTH) {
+    margin: 30px 0;
+  }
 }
 
 .easyLoginContainer {
-  // width: calc(100% - (24 * 2px));
   width: 100%;
-  height: 66px;
-
   padding: 12px 24px;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  border: 1px solid #ccd5e3;
+  border: 1px solid $gray-300;
+  background-color: $gray-200;
   border-radius: 8px;
-  background-color: #e7effb;
-}
-
-.easyLoginTitle {
-  @include font-base(#373740, 400, 14px, 16.71px);
+  user-select: none;
+  > p {
+    @include fontSetting(#373740, 400, 14px, 16.71px);
+  }
 }
 
 .easyLoginButtonWrap {
-  width: 100px;
-  height: 42px;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+  gap: 16px;
 
-.easyLoginButton {
-  width: 42px;
-  height: 42px;
-
-  border: none;
-  background-color: transparent;
-
-  cursor: pointer;
-}
-
-@media screen and (max-width: 390px) {
-  .loginContainer {
-    width: 325px;
-    height: 491px;
-  }
-
-  .inputContainer {
-    width: 325px;
+  > button {
+    width: 42px;
+    height: 42px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
   }
 }
