--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,3 +1,34 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-style: normal;
+}
+
+/* WebKit 기반 브라우저용 커스텀 스크롤바 */
+::-webkit-scrollbar {
+  width: 12px; /* 스크롤바 너비 */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* 스크롤바 트랙 배경 */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 모서리 */
+  border: 3px solid transparent; /* 스크롤바 여백 */
+  background-clip: padding-box;
+}
+
+/* Firefox용 커스텀 스크롤바 */
+body {
+  scrollbar-width: thin; /* 스크롤바 너비 */
+  scrollbar-color: #888 transparent; /* 스크롤바 색상 */
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+
 .droppable {
   background-color: #f8f9fa;
   padding: 16px;
@@ -26,6 +57,9 @@ body,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  font-family: 'Pretendard-Regular' !important;
+  font-style: normal !important;
 }
 
 html {
@@ -60,6 +94,7 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration: none;
 }
 
 abbr[title] {
