--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,4 +1,8 @@
-$tabletWidth: 769px;
-$mobileWidth: 390px;
+$PC_WIDTH: 1440px;
+$TABLET_WIDTH: 769px;
+$MOBILE_WIDTH: 390px;
 
 $footerTabletWidth: 690px;
+
+$GNB_HEIGHT_PC_TABLET: 93px;
+$GNB_HEIGHT_MOBILE: 63px;
