--- a/src/components/InputBox/style.module.scss
+++ b/src/components/InputBox/style.module.scss
@@ -3,14 +3,22 @@
 $errRed: #ff5b56;
 
 .inputContainer {
+  display: flex;
+  flex-direction: column;
+
+  > span {
+    margin: 6px 0 0 0;
+    @include fontSetting($errRed, 400, 14px, 16.71px);
+  }
+}
+
+.input {
   border: 1px solid $gray-300;
   border-radius: 8px;
   padding: 18px 15px;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  top: 16px;
-  left: 16px;
 
   &:focus-within {
     border-color: #007bff;
@@ -20,23 +28,28 @@ $errRed: #ff5b56;
     border-color: $errRed;
   }
   background-color: white;
-}
 
-.inputContainer img {
-  pointer-events: none;
-}
+  > input {
+    border-width: 0;
+    font-size: 16px;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    padding: 0;
 
-.input {
-  border-width: 0;
-  font-size: 16px;
-  outline: none;
-  width: 100%;
-  height: 100%;
-  @include font-base(#373740, 400, 16px, 24px);
-}
-.errMsg {
-  // margin: 6px 0 0 0;
-  width: 100%;
-  height: 20px;
-  @include font-base($errRed, 400, 14px, 16.71px);
+    @include fontSetting(#373740, 400, 16px, 24px);
+  }
+
+  > button {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    user-select: none;
+
+    > img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
