--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -1,13 +1,3 @@
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css');
-
-$font-family: 'Pretendard', sans-serif !important;
-$font-style: normal !important;
-
-@mixin font-default {
-  font-family: $font-family;
-  font-style: $font-style;
-}
-
 @mixin font-weight-size($weight, $size: null) {
   font-weight: $weight;
   font-size: $size;
@@ -22,8 +12,7 @@ $font-style: normal !important;
   }
 }
 
-@mixin font-base($color, $weight, $size, $line-height) {
-  @include font-default;
+@mixin fontSetting($color, $weight, $size, $line-height) {
   @include font-weight-size($weight, $size);
   @include font-line-height-letter_spacing($line-height);
   color: $color;
